--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^13.5.5",
+    "clsx": "^2.0.0",
+    "immer": "^10.0.3",
+    "next": "^13.5.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zustand": "^4.4.4"
   },
   "devDependencies": {
     "@types/node": "^20",
