Added grid and moved rpc type selector to its own page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/SelectEmployee.jsx", "src/components/RequirementsArea.jsx", "src/components/PositionInformation.jsx", "src/components/EmployeeInformation.jsx", "src/components/EditorToolbar.jsx", "src/components/DepartmentSelector.jsx", "src/components/BulkEmployeeSelector.jsx", "src/app/editor/globalStore.jsx"],
   "exclude": ["node_modules"]
 }
