--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "^13.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "zustand": "^4.4.4"
   },
   "devDependencies": {
