--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.0.5",
+    "axios": "^1.5.1",
     "clsx": "^2.0.0",
     "immer": "^10.0.3",
     "next": "^13.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "zustand": "^4.4.4"
   },
