--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.0.5",
+    "@tanstack/react-query-devtools": "^5.4.2",
     "axios": "^1.5.1",
     "clsx": "^2.0.0",
     "immer": "^10.0.3",
