--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
+    "react-number-format": "^5.3.1",
     "zustand": "^4.4.4"
   },
   "devDependencies": {
