--- a/package.json
+++ b/package.json
@@ -11,13 +11,21 @@
   "dependencies": {
     "@tanstack/react-query": "^5.0.5",
     "@tanstack/react-query-devtools": "^5.4.2",
+    "@tiptap/extension-color": "^2.1.16",
+    "@tiptap/extension-list-item": "^2.1.16",
+    "@tiptap/extension-text-align": "^2.1.16",
+    "@tiptap/extension-text-style": "^2.1.16",
+    "@tiptap/extension-underline": "^2.1.16",
+    "@tiptap/react": "^2.1.16",
+    "@tiptap/starter-kit": "^2.1.16",
     "axios": "^1.5.1",
     "clsx": "^2.0.0",
     "immer": "^10.0.3",
+    "lodash.debounce": "^4.0.8",
     "next": "^13.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.47.0",
+    "react-hook-form": "^7.49.3",
     "react-icons": "^4.11.0",
     "react-number-format": "^5.3.1",
     "zustand": "^4.4.4"
